[Password Generation] Presave generated password with the captured username

A generated password and a captured username should be presaved once a
user accepts a password generated by Chrome. If there is an entry with
the captured usernmae in the store, then Chrome presaves only password
(the username is empty).
Before this CL, Chrome always presaved only password.

This CL also ensures that a presaved entry is updated when the username
value has been changed by user.

Bug: 809019
Change-Id: I1f36f23d8ba12f09617b89791ce10a467f8dfa23
Reviewed-on: https://chromium-review.googlesource.com/1092745
Commit-Queue: Maxim Kolosovskiy <kolos@chromium.org>
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566390}
Former-commit-id: fa6cd8ef17f708c6fd9853ada31ebe1e0e173bfd